human_written_tests/WebAssembly/processed_control_flow_validation/test_block_32.wast
(assert_invalid
  (module (func $type-value-void-vs-f32 (result f32)
    (block (result f32) (nop))
  ))
  "type mismatch"
)